--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-14  Matthias Klose  <doko@debian.org>
+
+	* gcj.texi: Fix whitespace and formatting errors in the
+	synopsis of the man pages. Update copyright.
+
 2002-01-14  Tom Tromey  <tromey@redhat.com>
 
 	For PR libgcj/5303:
