* config/mips/mips.h (HI_AND_FP_REGS): New register class.         (CLASS_CANNOT_CHANGE_MODE): Disallow HI in little-endian mode.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48852 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-14  Richard Henderson  <rth@redhat.com>
+
+	* config/mips/mips.h (HI_AND_FP_REGS): New register class.
+	(CLASS_CANNOT_CHANGE_MODE): Disallow HI in little-endian mode.
+
 2002-01-14  Hans-Peter Nilsson  <hp@bitrange.com>
 
 	* reload1.c (reload_combine): Pass reg_sum replacement through
