--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2001-01-14  David Billinghurst <David.Billinghurst@riotinto.com>
+
+        * g77.f-torture/execute/intrinsic-unix-bessel.f:
+        Uncomment additional cases that now pass.
+
 2002-01-11  Richard Henderson  <rth@redhat.com>
 
 	* gcc.dg/i386-mmx-1.c, gcc.dg/i386-mmx-2.c: New.
