--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-01-14  Kazu Hirata  <kazu@hxi.com>
+
+	* config/h8300/h8300-protos.h: Remove the prototype for
+	eq_operator.
+	* config/h8300/h8300.c (eq_operator): Remove.
+
 2002-01-14  Richard Henderson  <rth@redhat.com>
 
 	* config/i386/i386.md (prefetch): Tidy.
