--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Tue Jan 15 00:56:11 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* unroll.c (final_reg_note_copy): Fix previous commit.
+
 2002-01-14  Kazu Hirata  <kazu@hxi.com>
 
 	* config/h8300/h8300-protos.h: Remove the prototype for
