--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-15  Kazu Hirata  <kazu@hxi.com>
+
+	* mips-tfile.c: Fix formatting.
+
 Tue Jan 15 00:56:11 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	* unroll.c (final_reg_note_copy): Fix previous commit.
