--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,11 @@
+2002-01-15  Andreas Jaeger  <aj@suse.de>
+
+	* gcc.dg/i386-mmx-1.c: Also run on x86-64.
+	* gcc.dg/i386-mmx-2.c: Likewise.
+	* gcc.dg/i386-sse-1.c: Likewise.
+	* gcc.dg/i386-sse-2.c: Likewise.
+	* gcc.dg/i386-sse-3.c: Likewise.
+
 2001-01-14  David Billinghurst <David.Billinghurst@riotinto.com>
 
         * g77.f-torture/execute/intrinsic-unix-bessel.f:
@@ -23,7 +31,7 @@ Fri Jan 11 12:13:30 2002  Nicola Pero  <n.pero@mi.flashnet.it>
 
 2002-01-08  Aldy Hernandez  <aldyh@redhat.com>
 
-        * gcc.dg/altivec-4.c: Add test for mtvscr, dssall, mfvscr, 
+        * gcc.dg/altivec-4.c: Add test for mtvscr, dssall, mfvscr,
 	dss, lvsl, lvsr, dstt, dstst, dststt, dst.
 
 2002-01-09  Richard Henderson  <rth@redhat.com>
