--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-01-15  David Edelsohn  <edelsohn@gnu.org>
+
+	* config/rs6000/rs6000.c (rs6000_output_function_epilogue): Do not
+	emit optional traceback table if optimize_size or TARGET_ELF.
+	* config/rs6000/rs6000.md (prefetch): New.
+
 2002-01-15  Andreas Jaeger  <aj@suse.de>
 
 	* config.gcc (x86_64-*-*): Install mmintrin.h and xmmintrin.h.
