* c-typeck.c (process_init_element): Don't save_expr 	COMPOUND_LITERAL_EXPR if just its initializer will be used.
	* gcc.dg/gnu89-init-1.c: Add new tests.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48868 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-15  Jakub Jelinek  <jakub@redhat.com>
+
+	* c-typeck.c (process_init_element): Don't save_expr
+	COMPOUND_LITERAL_EXPR if just its initializer will be used.
+
 2002-01-15  David Edelsohn  <edelsohn@gnu.org>
 
 	* config/rs6000/rs6000.c (rs6000_output_function_epilogue): Do not
