--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-15  Kazu Hirata  <kazu@hxi.com>
+
+	* config/i386/i386.c: Fix formatting.
+
 2002-01-15  Jakub Jelinek  <jakub@redhat.com>
 
 	* c-typeck.c (process_init_element): Don't save_expr
