--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2002-01-15  Kazu Hirata  <kazu@hxi.com>
 
+	* confiig/h8300/h8300.c (print_operand): Remove support for
+	unused operand characters.
+
+2002-01-15  Kazu Hirata  <kazu@hxi.com>
+
 	* read-rtl.c: Fix formatting.
 	* real.c: Likewise.
 	* recog.c: Likewise.
