* libiberty/mkstemps.c (mkstemps): On VMS, open temp file with option 	that causes it to be deleted when closed. 	* gcc/gcc.c (delete_if_ordinary): Backout previous change.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48872 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,9 +1,11 @@
+2002-01-15  Douglas B Rupp  <rupp@gnat.com>
+
+	* gcc.c (delete_if_ordinary): Backout previous change.
+
 2002-01-15  Kazu Hirata  <kazu@hxi.com>
 
-	* confiig/h8300/h8300.c (print_operand): Remove support for
+	* config/h8300/h8300.c (print_operand): Remove support for
 	unused operand characters.
-
-2002-01-15  Kazu Hirata  <kazu@hxi.com>
 
 	* read-rtl.c: Fix formatting.
 	* real.c: Likewise.
