--- a/gcc/doc/install.texi
+++ b/gcc/doc/install.texi
@@ -2163,7 +2163,10 @@ bootstrap}.
 @heading @anchor{hppa*-hp-hpux11}hppa*-hp-hpux11
 
 GCC 3.0 supports HP-UX 11.  You must use GNU binutils 2.11 or above on
-this platform.
+this platform.  Thread support is not currently implemented for this 
+platform, so @option{--enable-threads} does not work.
+See @uref{http://gcc.gnu.org/ml/gcc-prs/2002-01/msg00551.html}
+and @uref{http://gcc.gnu.org/ml/gcc-bugs/2002-01/msg00663.html}.
 
 @html
 </p>
