--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-15  Geoffrey Keating  <geoffk@redhat.com>
+
+	* gcc.dg/20020103-1.c: Also test for __PPC__, since that's used
+	by EABI.
+
 2002-01-15  Janis Johnson  <janis187@us.ibm.com>
 
 	* gcc.misc-tests/i386-prefetch.exp: New.
