2002-01-15  Aldy Hernandez  <aldyh@redhat.com>
        * config.gcc: Change altivec.h to altivec-defs.h.

        * config/rs6000/altivec.h: Delete.

        * config/rs6000/altivec-defs.h: Add.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48886 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2002-01-15  Aldy Hernandez  <aldyh@redhat.com>
+
+        * config.gcc: Change altivec.h to altivec-defs.h.
+
+        * config/rs6000/altivec.h: Delete.
+
+        * config/rs6000/altivec-defs.h: Add.
+
 2002-01-15  John David Anglin  <dave@hiauly1.hia.nrc.ca>
 
 	* vax.c (vax_rtx_cost): Return MAX_COST for unsupported MULT, UDIV
