Fix for PR java/5365: 	* gjavah.c (process_file): Turn class name into a file name.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48891 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-15  Tom Tromey  <tromey@redhat.com>
+
+	Fix for PR java/5365:
+	* gjavah.c (process_file): Turn class name into a file name.
+
 2002-01-14  Matthias Klose  <doko@debian.org>
 
 	* gcj.texi: Fix whitespace and formatting errors in the
