--- a/new-regalloc-branch/gcc/ChangeLog.RA
+++ b/new-regalloc-branch/gcc/ChangeLog.RA
@@ -1,3 +1,9 @@
+2002-01-16  Michael Matz  <matzmich@cs.tu-berlin.de>
+
+	* ra.c (undef_to_size_word): Don't add the begin offset to the
+	size.
+	(init_ra): Instead aborting just ingore sizeless modes.
+
 2002-01-11  Michael Matz  <matzmich@cs.tu-berlin.de>
 
 	* ra.c (struct web.changed): New.
