* java/awt/AWTPermission.java: Updated copyright.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48900 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,7 @@
 2002-01-15  Tom Tromey  <tromey@redhat.com>
 
+	* java/awt/AWTPermission.java: Updated copyright.
+
 	* java/awt/LayoutManager2.java: Merged with Classpath.
 	* java/awt/LayoutManager.java: Merged with Classpath.
 	* java/awt/GridLayout.java: Updated copyright and javadoc.
