PR target/5357: 	* config/sparc/sparc.c (sparc_override_options): Avoid MASK_V9 and 	MASK_V8 being both set.
	* gcc.dg/20020116-2.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48909 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-01-16  Jakub Jelinek  <jakub@redhat.com>
+
+	PR target/5357:
+	* config/sparc/sparc.c (sparc_override_options): Avoid MASK_V9 and
+	MASK_V8 being both set.
+
 2002-01-16  Ulrich Weigand  <uweigand@de.ibm.com>
 
 	* config/s390/s390.c (s390_emit_prologue): Do not emit USE
