* .cvsignore: Add man pages.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48911 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-15  Andreas Jaeger  <aj@suse.de>
+
+	* .cvsignore: Add man pages.
+
 2002-01-15  Tom Tromey  <tromey@redhat.com>
 
 	Fix for PR java/5365:
@@ -120,7 +124,7 @@
 
 2001-12-20  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
 
-	* decl.c (java_init_decl_processing): Don't initialize 
+	* decl.c (java_init_decl_processing): Don't initialize
 	finit_leg_identifier_node.
 	* java-tree.h (java_tree_index): Remove JTI_FINIT_LEG_IDENTIFIER_NODE.
 	(finit_leg_identifier_node): Remove.
@@ -128,7 +132,7 @@
 
 2001-12-20  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
 
-	* mangle.c (mangle_member_name): Don't special-case for 
+	* mangle.c (mangle_member_name): Don't special-case for
 	NO_DOLLAR_IN_LABEL.
 	* mangle_name.c (unicode_mangling_length): Likewise.
 	(append_unicode_mangled_name): Likewise.
@@ -184,11 +188,11 @@
 2001-12-15  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
 
 	* java-tree.h (otable_methods, otable_decl, otable_syms_decl,
-	otable_type, otable_ptr_type, method_symbol_type, 
+	otable_type, otable_ptr_type, method_symbol_type,
 	method_symbols_array_type, method_symbols_array_ptr_type): New
 	field/global tree definitions.
 	(flag_indirect_dispatch): New flag.
-	* decl.c (java_init_decl_processing): Initialize new otable and 
+	* decl.c (java_init_decl_processing): Initialize new otable and
 	otable_syms type nodes and decls. Add new field "index" to
 	method_type_node.
 	* class.c (build_method_symbols_entry): New function.
@@ -200,12 +204,12 @@
 	(build_method_symbols_entry): New function.
 	(emit_offset_symbol_table): New function.
 	* expr.c (get_offset_table_index): New function.
-	(build_invokevirtual): Build array reference to otable at the index 
+	(build_invokevirtual): Build array reference to otable at the index
 	returned by get_offset_table_index, and use the result as the vtable
 	offset.
 	(build_invokeinterface): Similar.
-	* jcf-parse.c (yyparse): If indirect-dispatch, call 
-	emit_offset_symbol_table at the end of compilation, after all classes 
+	* jcf-parse.c (yyparse): If indirect-dispatch, call
+	emit_offset_symbol_table at the end of compilation, after all classes
 	have been generated.
 	* jvspec.c: Don't pass findirect-dispatch to jvgenmain.
 	* lang.c (flag_indirect_dispatch): Define.
@@ -230,7 +234,7 @@
 	(expand_java_NEW): Generate calls for finalizer-free allocation.
 	(build_invokevirtual): Fix java vtable layout for
 	TARGET_VTABLE_USES_DESCRIPTORS.
-	* java-tree.h (enum java_tree_index): New entries: 
+	* java-tree.h (enum java_tree_index): New entries:
 	JTI_ALLOC_NO_FINALIZER_NODE, JTI_FINALIZE_IDENTIFIER_NODE.
 	(alloc_no_finalizer_node, finalize_deintifier_node): New macros.
 	(class_has_finalize_method): declare.
@@ -376,7 +380,7 @@ Mon Dec 10 06:09:57 2001  Douglas B. Rupp  <rupp@gnat.com>
 	* check-init.c (final_assign_error):  New helper function.
 	(check_final_reassigned, check_init):  Use it.
 	(check_init):  Also check IS_ARRAY_LENGTH_ACCESS for ARRAY.length.
-	
+
 	* java-tree.h (struct lang_decl, struct lang_decl_var):  Change all
 	bit-fields to unsigned.
 
@@ -421,7 +425,7 @@ Mon Dec 10 06:09:57 2001  Douglas B. Rupp  <rupp@gnat.com>
 2001-12-02  Tang Ching-Hui  <nicholas@cs.nthu.edu.tw>
 	    Alexandre Petit-Bianco  <apbianco@redhat.com>
 
-	* expr.c (build_java_arrayaccess): Call save_expr on array for 
+	* expr.c (build_java_arrayaccess): Call save_expr on array for
 	correct evaluation order, modified comment, fixed indentation.
 	* parse.y: (patch_assignment): Correctly extract the array base
 	from the tree generate by build_java_arrayaccess, added comments.
@@ -503,7 +507,7 @@ Mon Dec 10 06:09:57 2001  Douglas B. Rupp  <rupp@gnat.com>
 
 2001-11-08  Andreas Franck  <afranck@gmx.de>
 
-	* Make-lang.in (JAVA_INSTALL_NAME, JAVA_CROSS_NAME): Handle 
+	* Make-lang.in (JAVA_INSTALL_NAME, JAVA_CROSS_NAME): Handle
 	program_transform_name the way suggested by autoconf.
 	(java.install-common): Also transform auxiliary program names with
 	program_transform_name.
