--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2002-01-16  Nick Clifton  <nickc@cambridge.redhat.com>
+
+	* config/arm/arm.c (arm_expand_prologue): Add REG_MAYBE_DEAD note
+	to frame pointer initialisation instruction.
+	(thumb_expand_prologue): Add REG_MAYBE_DEAD note to frame pointer
+	initialisation instruction.
+
 2002-01-16  Jakub Jelinek  <jakub@redhat.com>
 
 	PR target/5357:
