* java/awt/Label.java: Merged with Classpath.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48913 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-16  Tom Tromey  <tromey@redhat.com>
+
+	* java/awt/Label.java: Merged with Classpath.
+
 2002-01-15  Tom Tromey  <tromey@redhat.com>
 
 	* java/awt/AWTPermission.java: Updated copyright.
