--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -4,6 +4,8 @@
 	to frame pointer initialisation instruction.
 	(thumb_expand_prologue): Add REG_MAYBE_DEAD note to frame pointer
 	initialisation instruction.
+	(soft_df_operand): Do not accept the IP register.
+	(nonimmediate_soft_df_operand): Do not accept the IP register.
 
 2002-01-16  Jakub Jelinek  <jakub@redhat.com>
 
