--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -15997,8 +15997,8 @@
   [(set (match_operand:SF 0 "register_operand" "")
 	(if_then_else:SF (lt (match_operand:SF 1 "register_operand" "")
 			     (match_operand:SF 2 "register_operand" ""))
-			 (match_operand:DF 3 "register_operand" "")
-			 (match_operand:DF 4 "register_operand" "")))
+			 (match_operand:SF 3 "register_operand" "")
+			 (match_operand:SF 4 "register_operand" "")))
    (clobber (reg:CC 17))]
   "FP_REG_P (operands[0]) && reload_completed
    && ((operands_match_p (operands[1], operands[3])
