* doc/invoke.texi: Change the dump file name of block 	reordering pass from 28.bbro to 29.bbro. 	Mention -dk option.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48916 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-01-16  Kazu Hirata  <kazu@hxi.com>
+
+	* doc/invoke.texi: Change the dump file name of block
+	reordering pass from 28.bbro to 29.bbro.
+	Mention -dk option.
+
 Wed Jan 16 17:54:22 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	* i386.md (minsf splitter): Fix pasto.
