PR target/5309:         * config/sparc/sparc.c (ultrasparc_adjust_cost): Handle TYPE_IDIV the 	same way as TYPE_IMUL. 	(ultrasparc_sched_reorder): Likewise. 	* config/sparc/sparc.md (type): Add comment to update 	ultrasparc_sched_reorder when making changes.
	* gcc.dg/ultrasp4.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48917 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2002-01-16  Jakub Jelinek  <jakub@redhat.com>
+
+	PR target/5309:
+        * config/sparc/sparc.c (ultrasparc_adjust_cost): Handle TYPE_IDIV the
+	same way as TYPE_IMUL.
+	(ultrasparc_sched_reorder): Likewise.
+	* config/sparc/sparc.md (type): Add comment to update
+	ultrasparc_sched_reorder when making changes.
+
 2002-01-16  Kazu Hirata  <kazu@hxi.com>
 
 	* doc/invoke.texi: Change the dump file name of block
