--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,9 @@
 2002-01-16  Jakub Jelinek  <jakub@redhat.com>
 
+	* gcc.dg/ultrasp4.c: New test.
+
+2002-01-16  Jakub Jelinek  <jakub@redhat.com>
+
 	* gcc.dg/20020116-2.c: New test.
 
 2002-01-15  Geoffrey Keating  <geoffk@redhat.com>
