* MAINTAINERS (Write After Approval): Remove myself.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48921 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-16  Kazu Hirata  <kazu@hxi.com>
+
+	* MAINTAINERS (Write After Approval): Remove myself.
+
 2001-12-19  Florian Weimer  <fw@deneb.enyo.de>
 
 	* MAINTAINERS (Write After Approval): Add myself.
