--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,9 @@
 2002-01-16  Tom Tromey  <tromey@redhat.com>
 
+	* java/util/IdentityHashMap.java (IdentityHashMap): Removed
+	commented code.
+	(hash): Correctly compute initial value for `h'.
+
 	* java/awt/Label.java: Merged with Classpath.
 
 2002-01-15  Tom Tromey  <tromey@redhat.com>
