--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-16  Kazu Hirata  <kazu@hxi.com>
+
+	* doc/extend.texi: Replace "option" with "attribute"
+	appropriately.
+
 2002-01-16  Jakub Jelinek  <jakub@redhat.com>
 
 	* config/alpha/alpha.c (some_small_symbolic_mem_operand): Look into
