--- a/gcc/config/h8300/h8300.md
+++ b/gcc/config/h8300/h8300.md
@@ -113,7 +113,7 @@
               (set (mem:QI (plus:HI (reg:HI 7) (const_int -1)))
                    (match_operand:QI 0 "register_operand" "r"))])]
   "TARGET_H8300"
-  "mov.w       %T0,@-r7"
+  "mov.w\\t%T0,@-r7"
   [(set_attr "length" "2")
    (set_attr "cc" "clobber")])
 
@@ -123,7 +123,7 @@
               (set (mem:QI (plus:SI (reg:SI 7) (const_int -3)))
                    (match_operand:QI 0 "register_operand" "r"))])]
   "TARGET_H8300H || TARGET_H8300S"
-  "mov.l       %S0,@-er7"
+  "mov.l\\t%S0,@-er7"
   [(set_attr "length" "4")
    (set_attr "cc" "clobber")])
 
@@ -213,7 +213,7 @@
               (set (mem:HI (plus:SI (reg:SI 7) (const_int -2)))
                    (match_operand:HI 0 "register_operand" "r"))])]
   "TARGET_H8300H || TARGET_H8300S"
-  "mov.l       %S0,@-er7"
+  "mov.l\\t%S0,@-er7"
   [(set_attr "length" "4")
    (set_attr "cc" "clobber")])
 
