More for PR java/5365: 	* gjavah.c (print_stub_or_jni): Cause exception to be thrown by 	default. 	(process_file): Generate include for 	java.lang.UnsupportedOperationExceptions.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48928 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,11 @@
+2002-01-16  Tom Tromey  <tromey@redhat.com>
+
+	More for PR java/5365:
+	* gjavah.c (print_stub_or_jni): Cause exception to be thrown by
+	default.
+	(process_file): Generate include for
+	java.lang.UnsupportedOperationExceptions.
+
 2002-01-15  Andreas Jaeger  <aj@suse.de>
 
 	* .cvsignore: Add man pages.
